tests/snapshots/string_interpolation_tests__empty_string_with_no_interpolation.snap
---
source: tests/string_interpolation_tests.rs
expression: program
---
Program {
    statements: [
        Echo {
            exprs: [
                String {
                    value: [
                        34,
                        34,
                    ],
                    span: Span {
                        start: 11,
                        end: 13,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 19,
            },
        },
        Echo {
            exprs: [
                String {
                    value: [
                        39,
                        39,
                    ],
                    span: Span {
                        start: 20,
                        end: 22,
                    },
                },
            ],
            span: Span {
                start: 15,
                end: 24,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 24,
    },
}
