tests/snapshots/string_interpolation_tests__escaped_variables.snap
---
source: tests/string_interpolation_tests.rs
expression: program
---
Program {
    statements: [
        Echo {
            exprs: [
                String {
                    value: [
                        34,
                        76,
                        105,
                        116,
                        101,
                        114,
                        97,
                        108,
                        32,
                        92,
                        36,
                        118,
                        97,
                        114,
                        34,
                    ],
                    span: Span {
                        start: 11,
                        end: 26,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 28,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 28,
    },
}
